--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,8 +1,15 @@
 .intro {
+  margin: 0px;
+  padding: 0px;
   height: 480px;
   text-align: center;
-  color: #ffffff;
-  background-color: #64a83b;
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: @white-fontcolor;
+
+  background-color: @green-background;
   background-image: url("../img/index-background-mobile@1x.jpg");
   background-position: top center;
   background-repeat: no-repeat;
@@ -22,5 +29,5 @@
   text-transform: uppercase;
 }
 .intro__image {
-  background-color: #ffffff;
+  background-color: @white-background-color;
 }
