--- a/source/less/blocks/page-catalog.less
+++ b/source/less/blocks/page-catalog.less
@@ -1,8 +1,15 @@
-.page-main {
+.page-catalog {
   width: 320px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: @grey-fontcolor;
+
   /* Временно для обводки сеточных блоков*/
   border: 5px solid green;
 }
