--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,12 +1,19 @@
 .page-footer {
+
   width: 320px;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  padding: 0px;
 
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: @grey-fontcolor;
   text-align: center;
-  color: #444444;
-  background-color: #f2f2f2;
+
+  background-color: @grey-background-color;
 
   /* Временно для обводки сеточных блоков*/
   border: 5px solid blue;
