--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -5,7 +5,8 @@
   display: flex;
   flex-direction: column;
 
-  color: #111111;
+  font-family: "Oswald", "Arial", sans-serif;
+  color: @darkgrey-fontcolor;
   font-size: 20px;
   line-height: 20px;
   font-weight: 500;
