--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,10 +1,18 @@
 .advantages {
+  margin: 0px;
+  padding: 0px;
+
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: @grey-fontcolor;
   /* Временно для обводки сеточных блоков*/
   border: 5px solid brown;
 
 }
 .advantages__title {
-  color: #111111;
+  color: @darkgrey-fontcolor;
   font-size: 36px;
   line-height: 60px;
   font-weight: 400;
