--- a/source/less/blocks/categories.less
+++ b/source/less/blocks/categories.less
@@ -1,5 +1,12 @@
 .categories {
-  background-color: #ffffff;
+  margin: 0px auto;
+  padding: 0px;
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: @grey-fontcolor;
+  background-color: @white-background-color;
   /* Временно для обводки сеточных блоков*/
   border: 5px solid pink;
 }
@@ -10,11 +17,11 @@
 }
 
 .categories__item {
-  background-color: #f2f2f2;
+  background-color: @grey-background-color;
 }
 
 .categories__title {
-  color: #111111;
+  color: @darkgrey-fontcolor;
   font-size: 24px;
   line-height: 37px;
   font-weight: 400;
