--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,37 +1,24 @@
-@font-face {
- font-family: "Oswald";
- src:
- url("../fonts/oswaldmedium.woff2") format("woff2"),
- url("../fonts/oswaldmedium.woff") format("woff");
-}
-@font-face {
- font-family: "Oswald";
- src:
- url("../fonts/oswaldregular.woff2") format("woff2"),
- url("../fonts/oswaldregular.woff") format("woff");
-}
+@import "blocks/scaffolding.less";
+@import "blocks/body.less";
+@import "blocks/visually-hidden.less";
+@import "blocks/page-header.less";
+@import "blocks/site-list.less";
+@import "blocks/page-main.less";
+@import "blocks/intro.less";
+@import "blocks/categories.less";
+@import "blocks/advantages.less";
+@import "blocks/page-footer.less";
+@import "blocks/social.less";
+@import "blocks/copyright.less";
+@import "blocks/main-nav.less";
+@import "blocks/page-catalog.less";
+@import "blocks/catalog.less";
+@import "blocks/description__list.less";
+@import "blocks/remain.less";
 
-@import "visually-hidden.less";
-@import "page-header.less";
-@import "site-list.less";
-@import "page-main.less";
-@import "intro.less";
-@import "categories.less";
-@import "advantages.less";
-@import "page-footer.less";
-@import "social.less";
-
-
-body {
-  min-width: 320px;
-  margin: 0px;
-  padding: 0px;
-
-  font-family: "Oswald", "Arial", sans-serif;
-  font-size: 14px;
-  line-height: 18px;
-  font-weight: 400;
-  color: #444444;
-
-  background-color: #ffffff;
-}
+@grey-fontcolor: #444444;
+@darkgrey-fontcolor: #111111;
+@white-fontcolor: #ffffff;
+@white-background-color: #ffffff;
+@green-background: #64a83b;
+@grey-background-color: #f2f2f2;
