--- a/source/less/blocks/body.less
+++ b/source/less/blocks/body.less
@@ -3,7 +3,7 @@ body {
   margin: 0px;
   padding: 0px;
 
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @primaty-font;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
