--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,5 +1,5 @@
 .copyright {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @secondary-font;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
