--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,5 +1,8 @@
 .social {
-  font-family: "Oswald", "Arial", sans-serif;
+  margin: 0px auto;
+  padding: 0px;
+
+  font-family: @secondary-font;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
@@ -8,5 +11,9 @@
 }
 
 .social__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
   list-style: none;
 }
