--- a/source/less/blocks/description__list.less
+++ b/source/less/blocks/description__list.less
@@ -1,6 +1,5 @@
 .description__list {
-
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @secondary-font;
   font-size: 12px;
   line-height: 16px;
   font-weight: 400;
