--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,22 +1,26 @@
 .page-main {
-  width: 320px;
   display: flex;
   flex-direction: column;
+  width: 320px;
   margin: 0 auto;
 
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @primaty-font;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
   color: @grey-fontcolor;
-
   /* Временно для обводки сеточных блоков*/
   border: 5px solid green;
 }
-.page-catalog__title {
-  font-family: "Oswald", "Arial", sans-serif;
-  color: @darkgrey-fontcolor;
-  font-size: 36px;
-  line-height: 60px;
-  font-weight: 400;
+
+@media (min-width: @tablet-width) {
+  .page-main {
+    width: @tablet-width;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-main {
+    width: @desktop-width;
+  }
 }
