--- a/source/less/blocks/remain.less
+++ b/source/less/blocks/remain.less
@@ -1,15 +1,18 @@
 .remain {
-  font-family: "Oswald", "Arial", sans-serif;
+  font-family: @primaty-font;
   font-size: 16px;
   line-height: 20px;
   font-weight: 400;
   color: @darkgrey-fontcolor;
   text-align: center;
 }
+
 .remain__show {
   text-transform: uppercase;
 }
+
 .remain__description{
+  font-family:@secondary-font;
   font-size: 12px;
   line-height: 16px;
   font-weight: 400;
