--- a/source/less/blocks/visually-hidden.less
+++ b/source/less/blocks/visually-hidden.less
@@ -1,12 +1,14 @@
-.visually-hidden {
+.visually-hidden:not(:focus):not(:active) {
   position: absolute;
+
   width: 1px;
   height: 1px;
   margin: -1px;
-  padding: 0;
   border: 0;
+  padding: 0;
+
   white-space: nowrap;
-  -webkit-clip-path: inset(100%);
+
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
