--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,5 @@
-@import "blocks/scaffolding.less";
+@import "variabless.less";
+@import "scaffolding.less";
 @import "blocks/body.less";
 @import "blocks/visually-hidden.less";
 @import "blocks/page-header.less";
@@ -15,10 +16,3 @@
 @import "blocks/catalog.less";
 @import "blocks/description__list.less";
 @import "blocks/remain.less";
-
-@grey-fontcolor: #444444;
-@darkgrey-fontcolor: #111111;
-@white-fontcolor: #ffffff;
-@white-background-color: #ffffff;
-@green-background: #64a83b;
-@grey-background-color: #f2f2f2;
