--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -31,7 +31,7 @@
   flex-wrap: wrap;
   height: 210px;
   /*Временно для подцветки*/
-  border: 1px solid lightgreen;
+  outline: 1px solid lightgreen;
 }
 
 @media (min-width: @tablet-width) {
@@ -39,7 +39,7 @@
     width: 708px;
 
     border: 1px solid red;
-  }
+    }
 
   .catalog__list {
     flex-direction: row;
