--- a/source/less/blocks/categories.less
+++ b/source/less/blocks/categories.less
@@ -10,7 +10,7 @@
 
   background-color: @white-background-color;
   /* Временно для обводки сеточных блоков*/
-  border: 5px solid pink;
+  outline: 5px solid pink;
 }
 
 .categories__list {
