--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -14,7 +14,7 @@
 
   background-color: @grey-background-color;
   /* Временно для обводки сеточных блоков*/
-  border: 5px solid blue;
+  outline: 5px solid blue;
 }
 
 @media (min-width: @tablet-width) {
