--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -10,7 +10,7 @@
   font-weight: 400;
   color: @grey-fontcolor;
   /* Временно для обводки сеточных блоков*/
-  border: 5px solid green;
+  outline: 5px solid green;
 }
 
 @media (min-width: @tablet-width) {
