--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -12,7 +12,7 @@
 
   list-style: none;
   /* Временно для обводски сеточных блоков*/
-  border: 5px solid red;
+  outline: 5px solid red;
 }
 
 @media (min-width: @tablet-width) {
