--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -8,7 +8,7 @@
   font-weight: 400;
   color: @grey-fontcolor;
   /* Временно для обводки сеточных блоков*/
-  border: 5px solid brown;
+  outline: 5px solid brown;
 }
 
 .advantages__title {
@@ -34,7 +34,7 @@
     display: flex;
     width: 708px;
   }
-  
+
   .advantages__list {
     display:flex;
     flex-direction: row;
