--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -16,7 +16,7 @@
   background-position: top center;
   background-repeat: no-repeat;
   /* Временно для обводски сеточных блоков*/
-  border: 5px solid gray;
+  outline: 5px solid gray;
 }
 
 .intro__title {
