--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -10,7 +10,7 @@
   color: @darkgrey-fontcolor;
   text-transform: uppercase;
   /* Временно для обводски сеточных блоков*/
-  border: 5px solid lightblue;
+  outline: 5px solid lightblue;
 }
 
 @media (min-width: @tablet-width) {
