--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -11,7 +11,7 @@
   color: @darkgrey-fontcolor;
   text-transform: uppercase;
   /* Временно для обводки сеточных блоков*/
-  border: 5px solid yellow;
+  outline: 5px solid yellow;
 }
 
 .page-header__logo {
