--- a/source/less/variabless.less
+++ b/source/less/variabless.less
@@ -1,10 +1,16 @@
 @tablet-width: 768px;
 @desktop-width: 1300px;
+@mobile-width-only: 767px;
 @grey-fontcolor: #444444;
 @darkgrey-fontcolor: #111111;
 @white-fontcolor: #ffffff;
 @white-background-color: #ffffff;
 @green-background: #64a83b;
 @grey-background-color: #f2f2f2;
+@grey-border-color: #e6e6e6;
+@grey-hover-color:#707070;
+@grey-active-color:#cbcbcb;
+@bg-site-active:#68b738;
+@border-color-category: #d9d9d9;
 @primaty-font: "Oswald", "Arial", sans-serif;
 @secondary-font:"Arial", sans-serif;
