--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,8 +1,33 @@
 .copyright {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 280px;
+  margin: 0 auto;
+  padding: 20px 0px;
+  border-top: 1px solid grey;
+}
+
+.copyright__link-text {
   font-family: @secondary-font;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
   color: @grey-fontcolor;
   text-align: center;
+  text-decoration: none;
+}
+.copright__image {
+  width: 27px;
+  height: 34px;
+  fill: #444444;
+}
+
+@media (min-width: @tablet-width) {
+  .copyright {
+    width: 162px;
+    border:none;
+    margin:0px;
+  }
+
 }
