--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -1,53 +1,132 @@
 .intro {
+  position: relative;
+  display: block;
+
+  width: 320px;
   margin: 0px auto;
   padding: 0px;
-  width: 320px;
-  height: 480px;
 
   font-family: @primaty-font;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
+  color: @grey-fontcolor;
   text-align: center;
+
+  background-color: @white-background-color;
+}
+
+.intro-wrapper {
+  width: 320px;
+  height: 305px;
+
+  line-height: 14px;
   color: @white-fontcolor;
 
   background-color: @green-background;
   background-image: url("../img/index-background-mobile@1x.jpg");
   background-position: top center;
   background-repeat: no-repeat;
-  /* Временно для обводски сеточных блоков*/
-  outline: 5px solid gray;
+  background-size: contain;
 }
 
 .intro__title {
+  margin: 0px;
+  padding-top:29px;
+
   font-size: 36px;
   line-height: 36px;
   font-weight: 400;
 }
 
 .intro__slogan {
-  font-size: 14px;
-  line-height: 14px;
-  font-weight: 400;
+  margin:0px;
+  margin-top: 21px;
+  margin-bottom: 167px;
+
   text-transform: uppercase;
 }
 
 .intro__image {
-  background-color: @white-background-color;
+  position: absolute;
+  top: 168px;
+  left: 20px;
+}
+
+.intro__choice-program {
+  margin-top: 135px;
 }
 
 @media (min-width: @tablet-width) {
   .intro {
     display: flex;
     flex-direction: column;
-    width: 708px;
 
+    width: 708px;
+  }
+
+  .intro-wrapper {
+    width: 430px;
+    height: auto;
+    margin-left: 92px;
+
+    color: @darkgrey-fontcolor;
     text-align: left;
+
+    background-color: @white-background-color;
+    background-image: none;
+  }
+
+  .intro__title {
+    padding-top:29px;
+
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  .intro__slogan {
+    margin-top: 43px;
+    margin-bottom: 0px;
+
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .intro__choice-program {
+    z-index: 2;
+
+    margin-top:48px;
+    margin-left: 92px;
+  }
+
+  .intro__image {
+    top: 230px;
+    left:0px;
+    z-index: 1;
+
+    width: 708px;
+    height: 609px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .intro {
     width: 1220px;
+
+    margin-top:-500px;
+
+    background: none;
+  }
+  
+  .intro__choice-program {
+    margin-bottom: 188px;
+  }
+
+  .intro__image {
+    top: -54px;
+    left:490px;
+
+    width:552px;
+    height: 499px;
   }
 }
