--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,4 +1,6 @@
 .main-nav {
+  position: relative;
+
   width: 320px;
   margin: 0px auto;
   padding: 0px;
@@ -9,16 +11,72 @@
   font-weight: 500;
   color: @darkgrey-fontcolor;
   text-transform: uppercase;
-  /* Временно для обводски сеточных блоков*/
-  outline: 5px solid lightblue;
+}
+
+.main-nav__toggle {
+  position: absolute;
+  top: -42px;
+  right: 20px;
+  z-index: 2;
+
+  display: block;
+  width: 25px;
+  height: 18px;
+
+  background-color: @white-background-color;
+
+  cursor: pointer;
+  border: none;
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-image: url(../../img/icon-mobile-menu.svg);
+  width: 25px;
+  height: 18px;
+}
+
+.main-nav--opened .main-nav__toggle::before {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-image: url(../../img/icon-close.svg);
+    width:18px;
+    height: 18px;
+}
+/*-----------------------------*/
+@media (max-width: @mobile-width-only) {
+  .main-nav--closed .main-nav__wrapper {
+    display: none;
+  }
+
+  .main-nav--opened .main-nav__wrapper {
+    position: absolute;
+    left: 0;
+    right:0;
+    z-index: 10;
+    background-color: @white-background-color;
+  }
+
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__wrapper {
+    position: static;
+    min-height: 0;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .main-nav {
-    width: 440px;
-    margin-left: auto;
+    width: auto;
+    margin:0px;
   }
-
   .main-nav__toggle {
     display: none;
   }
@@ -26,7 +84,14 @@
 
 @media (min-width: @desktop-width) {
   .main-nav {
-    width: 50%;
-    margin-left: auto;
+      width: 50%;
+      margin:0px;
+  }
+  .main-nav_index {
+    height:696px;
+    background: @green-background;
+    background-image: url("../img/index-background-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-size: auto auto;
   }
 }
