--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,7 @@
 @import "variabless.less";
 @import "scaffolding.less";
 @import "blocks/body.less";
+@import "blocks/button.less";
 @import "blocks/visually-hidden.less";
 @import "blocks/page-header.less";
 @import "blocks/site-list.less";
