--- a/source/less/variabless.less
+++ b/source/less/variabless.less
@@ -8,9 +8,13 @@
 @green-background: #64a83b;
 @grey-background-color: #f2f2f2;
 @grey-border-color: #e6e6e6;
-@grey-hover-color:#707070;
-@grey-active-color:#cbcbcb;
 @bg-site-active:#68b738;
 @border-color-category: #d9d9d9;
 @primaty-font: "Oswald", "Arial", sans-serif;
 @secondary-font:"Arial", sans-serif;
+@bt-hvr-color: #5eaa2f;
+@rbt-hvr-color: #ebebeb;
+@fill-grey: #444444;
+@fill-pf-logo: #111111;
+@fill-ph-logo0: #FDC305;
+@fill-ph-logo1: #F06351;
