--- a/source/less/blocks/description__list.less
+++ b/source/less/blocks/description__list.less
@@ -1,4 +1,7 @@
 .description__list {
+  width:140px;
+  margin-top: 10px;
+
   font-family: @secondary-font;
   font-size: 12px;
   line-height: 16px;
@@ -6,4 +9,51 @@
   color: @grey-fontcolor;
 
   list-style: none;
+
+  border-collapse: collapse;
+}
+
+.description__option {
+  text-align: left;
+}
+.description__value {
+  text-align: right;
+}
+
+@media (min-width: @tablet-width) {
+  .description__list {
+    width: 249px;
+    margin: 0px;
+    margin-top: 15px;
+    margin-left:8px;
+    padding: 0px;
+
+    font-size: 16px;
+  }
+
+  .description__option {
+    padding-top: 9px;
+    padding-bottom: 7px;
+
+    border-bottom: 1px solid @grey-fontcolor;
+  }
+
+  .description__value {
+    padding-top: 9px;
+    padding-bottom: 7px;
+
+    border-bottom: 1px solid @grey-fontcolor;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .description__list {
+    width: 167px;
+    margin: 0px;
+    margin-top: 15px;
+    margin-left:0px;
+    padding: 0px;
+
+    font-size: 16px;
+  }
 }
