--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -78,7 +78,7 @@
   }
 
   .intro__title {
-    padding-top:29px;
+    padding-top:45px;
 
     font-size: 60px;
     line-height: 60px;
@@ -117,9 +117,18 @@
 
     background: none;
   }
-  
+
+  .intro-wrapper {
+    margin-left: 85px;
+  }
+
   .intro__choice-program {
     margin-bottom: 188px;
+    margin-left: 83px;
+  }
+
+  .intro__slogan {
+    margin-top: 40px;
   }
 
   .intro__image {
