--- a/source/less/blocks/page-catalog.less
+++ b/source/less/blocks/page-catalog.less
@@ -9,25 +9,46 @@
   line-height: 18px;
   font-weight: 400;
   color: @grey-fontcolor;
-  /* Временно для обводки сеточных блоков*/
-  outline: 5px solid green;
 }
 
 .page-catalog__title {
+  margin:0px;
+  padding: 0px;
+  padding-left:20px;
+  padding-top:17px;
+  padding-bottom: 27px;
+
   font-size: 36px;
   line-height: 60px;
   font-weight: 400;
   color: @darkgrey-fontcolor;
+
+  border-bottom: 1px solid @grey-border-color;
 }
 
 @media (min-width: @tablet-width) {
   .page-catalog {
     width: @tablet-width;
   }
+
+  .page-catalog__title {
+    margin:0px;
+    margin-left: 33px;
+    margin-top: 49px;
+    padding: 0px;
+    font-size: 60px;
+    border-bottom: none;
+  }
 }
 
 @media (min-width: @desktop-width) {
   .page-catalog  {
     width: @desktop-width;
+  }
+  
+  .page-catalog__title {
+    margin:0px;
+    margin-left: 40px;
+    margin-top: 65px;
   }
 }
