--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -25,17 +25,24 @@
   padding-top: 39px;
   padding-bottom: 31px;
 
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid @border-color-category;
 }
 
 .page-footer__logo-image {
   width:128px;
   heigth: 24px;
   .st0 {
-    fill: #111111;
+    fill: @fill-pf-logo;
   }
 }
 
+.page-footer__logo-image:hover {
+  opacity: 0.8;
+}
+
+.page-footer__logo-image:active {
+  opacity: 0.6;
+}
 
 @media (min-width: @tablet-width) {
   .page-footer {
@@ -50,6 +57,7 @@
     margin:0px auto;
     align-items: center;
   }
+
   .page-footer__logo {
     justify-content: flex-start;
     margin: 0px;
@@ -62,6 +70,7 @@
   .page-footer {
     width: @desktop-width;
   }
+  
   .page-footer__wrapper{
     width: 1220px;
   }
