--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -21,13 +21,27 @@
   height: 65px;
   padding-left: 20px;
 
-  border-bottom: 1px solid #e6e6e6;
+  border-bottom: 1px solid @grey-border-color;
 }
 
 .page-header__logo-image {
   width: 193px;
   height: 38px;
+  .st0 {
+    fill: @fill-ph-logo0;
+  }
+  .st1 {
+    fill: @fill-ph-logo1;
+  }
 }
+
+.page-header__logo-image:hover {
+    opacity: 0.8;
+  }
+  .page-header__logo-image:active {
+    opacity: 0.6;
+  }
+
 
 @media (min-width: @tablet-width) {
   .page-header {
@@ -37,8 +51,9 @@
   }
 
   .page-header__logo {
+    margin-top:20px;
     margin-left: 30px;
-    margin-right:96px;
+    margin-right:100px;
     padding: 0px;
 
     border: none;
@@ -61,6 +76,7 @@
     margin-right: 0px;
     padding-top:54px;
   }
+  
   .page-header__logo-image {
     margin-left: 40px;
     width: 202px;
