--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -28,23 +28,37 @@
 .social__link--vkontakte {
   width: 22px;
   height:12px;
-  fill: #444444;
+  fill: @fill-grey;
 }
 
 .social__link--instagram {
   width: 16px;
   height:16px;
   .st0 {
-  fill: #444444;
+  fill: @fill-grey;
   }
 }
 
 .social__link--facebook {
   width: 10px;
   height:19px;
-  fill: #444444;
+  fill: @fill-grey;
 }
 
+.social__link--vkontakte:hover,
+.social__link--instagram:hover,
+.social__link--facebook:hover {
+  fill:@bg-site-active;
+  .st0 {
+    fill: @bg-site-active;
+  }
+}
+
+.social__link--vkontakte:active,
+.social__link--instagram:active,
+.social__link--facebook:active {
+  opacity: 0.3;
+}
 
 @media (min-width: @tablet-width) {
   .social {
@@ -61,10 +75,8 @@
     height:23px;
   }
 
-
   .social__link--facebook{
     width: 14px;
     height: 28px;
   }
-
 }
