--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -96,4 +96,12 @@
     background-repeat: no-repeat;
     background-size: auto auto;
   }
+
+  @media
+  (min-resolution: 144dpi),
+  (min-resolution: 1.5dppx) {
+   .main-nav_index {
+     background-image: url("../img/index-background-desktop@2x.jpg");
+   }
+  }
 }
