--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -30,6 +30,14 @@
   background-size: contain;
 }
 
+@media
+(min-resolution: 144dpi),
+(min-resolution: 1.5dppx) {
+ .main-nav_index {
+   background-image: url("../img/index-background-mobile@2x.jpg");
+ }
+}
+
 .intro__title {
   margin: 0px;
   padding-top:29px;
