--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -55,25 +55,49 @@
 
   background-color: @green-background;
 }
+
 .advantages__item--benefit::after {
   background-image: url(../img/advantage-leaf@1x.png);
   background-position: center center;
   background-repeat: no-repeat;
 }
+
 .advantages__item--release::after {
   background-image: url(../img/advantage-powder@1x.png);
   background-position: center center;
   background-repeat: no-repeat;
 }
+
 .advantages__item--replacement::after {
   background-image: url(../img/advantage-dining@1x.png);
   background-position: center center;
   background-repeat: no-repeat;
 }
+
 .advantages__item--changes::after {
   background-image: url(../img/advantage-clock@1x.png);
   background-position: center center;
   background-repeat: no-repeat;
+}
+
+@media
+(min-resolution: 144dpi),
+(min-resolution: 1.5dppx) {
+ .advantages__item--benefit::after {
+   background-image: url(../img/advantage-leaf@2x.png);
+ }
+
+ .advantages__item--release::after {
+   background-image: url(../img/advantage-powder@2x.png);
+ }
+
+ .advantages__item--replacement::after {
+   background-image: url(../img/advantage-dining@2x.png);
+ }
+
+ .advantages__item--changes::after {
+   background-image: url(../img/advantage-clock@2x.png);
+ }
 }
 
 @media (min-width: @tablet-width) {
