--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -17,6 +17,7 @@
   text-align: center;
   text-decoration: none;
 }
+
 .copright__image {
   width: 27px;
   height: 34px;
@@ -45,5 +46,10 @@
     font-family: @secondary-font;
     font-size: 16px;
     line-height: 16px;
+  }
+
+  .copright__image {
+    width: 41px;
+    height: 41px;
   }
 }
