--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -4,15 +4,15 @@
   align-items: center;
   width: 280px;
   margin: 0 auto;
-  padding: 20px 0;
+  padding: 12px 0;
 
   border-top: 1px solid @grey-border-color;
 }
 
 .copyright__link-text {
   font-family: @secondary-font;
-  font-size: 14px;
-  line-height: 18px;
+  font-size: 16px;
+  line-height: 16px;
   font-weight: 400;
   color: @grey-fontcolor;
   text-align: center;
@@ -20,8 +20,10 @@
 }
 
 .copright__image {
-  width: 27px;
-  height: 34px;
+  width: 41px;
+  height: 41px;
+  margin-top: 8px;
+  margin-right: -8px;
 
   fill: @fill-grey;
 }
@@ -42,16 +44,5 @@
     margin: 0;
 
     border: none;
-  }
-
-  .copyright__link-text {
-    font-family: @secondary-font;
-    font-size: 16px;
-    line-height: 16px;
-  }
-
-  .copright__image {
-    width: 41px;
-    height: 41px;
   }
 }
