--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -39,7 +39,7 @@
 
 .intro__title {
   margin: 0;
-  padding-top: 29;
+  padding-top: 27px;
 
   font-size: 36px;
   line-height: 36px;
@@ -48,7 +48,7 @@
 
 .intro__slogan {
   margin: 0;
-  margin-top: 21px;
+  margin-top: 25px;
   margin-bottom: 167px;
 
   text-transform: uppercase;
@@ -61,7 +61,7 @@
 }
 
 .intro__choice-program {
-  margin-top: 135px;
+  margin-top: 134px;
 }
 
 @media (min-width: @tablet-width) {
@@ -75,7 +75,7 @@
   .intro-wrapper {
     width: 430px;
     height: auto;
-    margin-left: 92px;
+    margin-left: 88px;
 
     color: @darkgrey-fontcolor;
     text-align: left;
@@ -102,13 +102,13 @@
   .intro__choice-program {
     z-index: 2;
 
-    margin-top: 48px;
-    margin-left: 92px;
+    margin-top: 45px;
+    margin-left: 88px;
   }
 
   .intro__image {
-    top: 248px;
-    left: 5px;
+    top: 250px;
+    left: 0;
     z-index: 1;
 
     width: 708px;
@@ -126,7 +126,7 @@
   }
 
   .intro-wrapper {
-    margin-left: 85px;
+    margin-left: 82px;
   }
 
   .intro__title {
@@ -134,8 +134,9 @@
   }
 
   .intro__choice-program {
-    margin-bottom: 188px;
-    margin-left: 83px;
+    margin-top: 54px;
+    margin-bottom: 190px;
+    margin-left: 82px;
   }
 
   .intro__slogan {
